# ntpuvpn-rs

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: main.yml
src/: config.rs  lib.rs  main.rs  reroute_server.rs  utils.rs  vpn_server.rs
