[package]
name = "ntpuvpn-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
arp-toolkit = "0.3.2"
futures = "0.3.31"
net-route = "0.4.6"
pnet = "0.35.0"
rpassword = "7.4.0"
serde = { version = "1.0.225", features = ["derive"] }
tempfile = "3.22.0"
tokio = { version = "1.47.1", features = ["full"] }
tun-rs = { version = "2.7.3", features = ["async_tokio"]}

