[package]
name = "ntpuvpn-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
net-route = "0.4.6"
pnet = "0.35.0"
rpassword = "7.4.0"
serde = { version = "1.0.226", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
expectrl = { version = "0.8.0", features = ["async"] }
futures-lite = "2.6.1"
serde_json = "1.0.145"
dirs = "6.0.0"

